# workshop03

./: .env.example  .gitignore  README.md  docker-compose.yml  presentation.html  pyproject.toml  requirements.txt
data/processed/: world_happiness_harmonized.csv
docs/: workshop-script.md
kafka/: consumer.py  producer.py  setup_metabase.py
models/: model.pkl
notebooks/: eda.ipynb  model_training.ipynb
sql/: create_tables.sql  kpis.sql
