[project]
name = "workshop03"
version = "0.1.0"
description = "Streaming ETL with Apache Kafka and Machine Learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "kafka-python-ng>=2.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "joblib>=1.4.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.24.0",
    "ipykernel>=6.29.0",
    "nbformat>=5.0.0",
    "nbconvert>=7.17.1",
    "country-converter>=1.3.2",
]
